filesummary performance improvements

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -298,6 +298,7 @@ Statistic_Label.ObsoleteUrlRequests=Obsolete URL Requests
 Statistic_Description.ObsoleteUrlRequests=Number of web requests to obsolete URLs.
 Statistic_Label.SyslogMessagesSent=Syslog Messages Sent
 Statistic_Description.SyslogMessagesSent=Number of successfully sent syslog messages.
+EpsStatistic_Label.LDAP_BINDS=LDAP Binds
 EpsStatistic_Label.REQUESTS=Requests
 EpsStatistic_Label.SESSIONS=Sessions
 EpsStatistic_Label.PASSWORD_CHANGES=Password Changes
