minor ui and i18n issues

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -355,6 +355,7 @@ Title_TitleBarAuthenticated=@User:ID@  Password Self Service
 Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
+Title_Upload=Upload
 Title_UploadPhoto=Upload Photo
 Title_UserData=My Data
 Title_UserEventHistory=Password History
