correct ad pwd policy level merging

--- a/server/src/main/resources/password/pwm/i18n/Message.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message.properties
@@ -152,6 +152,7 @@ Rule_AllowUserChange=Permit Admin Change Password
 Rule_AllowAdminChange=Permit User Change Password
 Rule_ADComplexityLevel=AD Complexity Level
 Rule_ADComplexityMaxViolations=Maximum AD Complexity Violations
+Rule_AllowMacroInRegExSetting=Regular Expressions Allow Macros
 Success_ActivateUser=Your user account has been successfully activated.  Be sure to complete the process, or you will not be able to access your account.
 Success_ConfigFileUpload=The configuration file has been successfully uploaded.
 Success_ClearResponse=Your secret questions and answers have been successfully removed.
