add /forgottenpassword rest api

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -61,6 +61,7 @@ Button_RecoverPassword=Check Answers
 Button_Reset=Clear
 Button_Search=Search
 Button_SetResponses=Save Answers
+Button_Select=Select
 Button_Show=Show
 Button_Show_Responses=Show Responses
 Button_Skip=Skip
