--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -736,6 +736,7 @@ Setting_Description_webservices.enableReadAnswers=Enable this option to allow @P
 Setting_Description_webservices.external.secrets=Define Users and Passwords that are able to authenticate to and use the REST web services.  For each user, a list of available services and a password can be defined.  Invoking the REST web services using these users does not require an LDAP user and instead relies on the configured LDAP proxy user.   In most cases this is the prefered appraoch for REST clients to authenticate.  Usernames defined here will preempt LDAP username resolution.
 Setting_Description_webservices.healthStats.makePublic=Enable this option to enable the Health and Statistics web services publicly.  Normally, these require authentication as there might be security sensitive data available.  Enabling this option allows the users to use the web services without authentication.  You must enable this is setting for the public (non-authenticated) page at <i>/public/health.jsp</i> to be functional.
 Setting_Description_webservices.queryMatch=Add an LDAP filter that contains the users permitted to execute REST web services.
+Setting_Description_webservices.public.enable=Web Services which are enabled for public (unauthenticated) usage.
 Setting_Description_webservices.thirdParty.queryMatch=Add an LDAP filter that contains the users permitted to execute REST web services and specify a third party via the 'username' parameter.
 Setting_Description_webservice.userAttributes=Add the user attributes that the various web services use and @PwmAppName@ presents as part of the users' data sets.
 Setting_Description_wordlistCaseSensitive=Enable this option to treat the word list as case sensitive for all matches. Changing this value causes @PwmAppName@ to recompile the word list.
@@ -888,7 +889,7 @@ Setting_Label_external.macros.urls=External Macro REST Server URLs
 Setting_Label_external.pwcheck.urls=External Password Check REST Server URLs
 Setting_Label_external.remoteData.url=Remote Form Data Service
 Setting_Label_external.remoteResponses.url=External Remote Responses REST Server URL
-Setting_Label_external.webservices.enable=Enable Web Services
+Setting_Label_external.webservices.enable=Enable REST Web Server
 Setting_Label_forceBasicAuth=Force Basic Authentication
 Setting_Label_forgottenUsername.enable=Enable Forgotten User Name
 Setting_Label_forgottenUsername.form=Forgotten User Name Form
@@ -1253,9 +1254,10 @@ Setting_Label_updateAttributes.writeAttributes=Update Profile Actions
 Setting_Label_urlshortener.classname=Enable URL Shortening Service Class
 Setting_Label_urlshortener.parameters=Configuration Parameters for URL Shortening Service
 Setting_Label_useXForwardedForHeader=Use X-Forwarded-For Header
-Setting_Label_webservices.enableReadAnswers=Allow Challenge Service to Read Answers
+Setting_Label_webservices.enableReadAnswers=Allow Challenge REST Service to Read Answers
 Setting_Label_webservices.external.secrets=Web Service Non-LDAP Users and Passwords
 Setting_Label_webservices.healthStats.makePublic=Enable Public Health and Statistics Web Services
+Setting_Label_webservices.public.enable=Public REST Web Services
 Setting_Label_webservices.queryMatch=Web Services LDAP Authentication Permissions
 Setting_Label_webservices.thirdParty.queryMatch=Web Services LDAP Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
