--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -334,6 +334,8 @@ Setting_Description_email.sendUsername=Define this template to send an email for
 Setting_Description_email.profile.list=List of SMTP email servers to be used.  @PwmAppName@ will alternate among the servers in the list when a server becomes unreachable.
 Setting_Description_email.smtp.address=Specify an SMTP server address that sends the emails @PwmAppName@ generates.  Removing this setting prevents @PwmAppName@ from sending any emails.  Ensure that the server specified here allows relaying.  For best results, use a local SMTP server.
 Setting_Description_email.smtp.port=Specify the network port number for the SMTP server.
+Setting_Description_email.smtp.type=The type of connection to use for the SMTP session.
+Setting_Description_email.smtp.serverCerts=Certificates used for secure communication with server.  If no certificates are specfied, the default Java trust store will be used for certificate validation.
 Setting_Description_email.smtp.username=Specify an SMTP user that logs in to the SMTP server so that it can send the emails @PwmAppName@ generates.  A blank value here sends SMTP messages without authentication.
 Setting_Description_email.smtp.userpassword=Specify the password for the SMTP user.  A blank value here sends SMTP messages without authentication.
 Setting_Description_email.smtp.advancedSettings=Add Name/Value settings to control the behavior of the mail agent. Available settings are defined as part of the <a href\="https\://javamail.java.net/nonav/docs/api/com/sun/mail/smtp/package-summary.html">JavaMail API</a>. The settings must be in "name\=value" format, where name is the key value of a valid JavaMail API setting.
@@ -856,6 +858,8 @@ Setting_Label_email.sendUsername=Send User Name Email
 Setting_Label_email.profile.list=Email Servers
 Setting_Label_email.smtp.address=SMTP Server Address
 Setting_Label_email.smtp.port=SMTP Server Port
+Setting_Label_email.smtp.type=SMTP Connection Type
+Setting_Label_email.smtp.serverCerts=SMTP Server Certificates
 Setting_Label_email.smtp.username=SMTP Server User Name
 Setting_Label_email.smtp.userpassword=SMTP Server Password
 Setting_Label_email.smtp.advancedSettings=SMTP Email Advanced Settings
