user-activation-profiles

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -21,6 +21,8 @@
 
 Category_Description_ACCOUNT_INFO=Show account information to the logged in user.
 Category_Description_ACTIVATION=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
+Category_Description_ACTIVATION_SETTINGS=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
+Category_Description_ACTIVATION_PROFILE=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
 Category_Description_ACTIVE_DIRECTORY=Active Directory specific settings
 Category_Description_ADMINISTRATION=Administration
 Category_Description_APPLICATION=Application
@@ -120,6 +122,8 @@ Category_Description_WEB_SERVICES=Settings that are of interest to developers or
 Category_Description_WORDLISTS=Word Lists
 Category_Label_ACCOUNT_INFO=Account Information
 Category_Label_ACTIVATION=User Activation
+Category_Label_ACTIVATION_SETTINGS=Settings
+Category_Label_ACTIVATION_PROFILE=User Activation Profiles
 Category_Label_ACTIVE_DIRECTORY=Microsoft Active Directory
 Category_Label_ADMINISTRATION=Administration
 Category_Label_APPLICATION=Application
@@ -220,6 +224,7 @@ Category_Label_WORDLISTS=Word Lists
 Setting_Description_accountInfo.view.form=Specify the LDAP attributes to show to users on the account information page.
 Setting_Description_accountInfo.viewStatusValues=Select the fields that are available for the users to view about their own account.
 Setting_Description_activateUser.allowUnlock=Enable this option to allow users to try to unlock the user account during activation.  If true, and if the users' account are locked @PwmAppName@ unlocks the users' accounts.
+Setting_Description_activateUser.profile.list=Activate User Profiles.
 Setting_Description_activateUser.enable=Enables the new user activation module.
 Setting_Description_activateUser.form=Specify the form fields for activate user module.  @PwmAppName@ requires the users to enter each attribute specified.  Ideally, add attributes that require the user to enter some personal data that is not publicly known.
 Setting_Description_activateUser.queryMatch=Specify and LDAP filter that only allows @PwmAppName@ to active users who match this query.  Generally, you only allow users who have never been authenticated and are not disabled to activate.  The default example uses the last login time attributes on the user object to determine if the user has never logged in.  It is the responsibility of the administrator to ensure this activation feature works correctly.  Misconfiguration could potentially result in unintended activations occurring.
@@ -744,6 +749,7 @@ Setting_Description_wordlistCaseSensitive=Enable this option to treat the word l
 Setting_Label_accountInfo.view.form=LDAP Display Attributes
 Setting_Label_accountInfo.viewStatusValues=Viewable Status Fields
 Setting_Label_activateUser.allowUnlock=Unlock User During Activation
+Setting_Label_activateUser.profile.list=Activate User Profile List
 Setting_Label_activateUser.enable=Enable User Activation
 Setting_Label_activateUser.form=Activate User Form
 Setting_Label_activateUser.queryMatch=Activation Permission
