--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -90,6 +90,8 @@ Category_Description_PASSWORD_GLOBAL=Password related settings that apply to all
 Category_Description_PASSWORD_POLICY=Settings that define the LDAP directories that are used by the application.  If the user identities are in multiple LDAP directories, configure each directory as an LDAP Directory Profile.  Within each LDAP directory profile definition, you can control the individual servers and other settings for each LDAP directory.
 Category_Description_PW_EXP_NOTIFY=Password Expiration Notification
 Category_Description_PEOPLE_SEARCH=The people search module provides basic white pages or directory lookup functionality to your users.  Customizations allow easy searching and display quick detailed information about your users' colleagues.
+Category_Description_PEOPLE_SEARCH_SETTINGS=People Search Settings
+Category_Description_PEOPLE_SEARCH_PROFILE=People Search Profiles
 Category_Description_PROFILES=Profiles
 Category_Description_RECOVERY_DEF=Definition
 Category_Description_RECOVERY_OAUTH=OAuth
@@ -190,6 +192,8 @@ Category_Label_OTP_SETUP=Setup OTP
 Category_Label_PASSWORD_GLOBAL=Password Settings
 Category_Label_PASSWORD_POLICY=Password Policies
 Category_Label_PEOPLE_SEARCH=People Search
+Category_Label_PEOPLE_SEARCH_SETTINGS=People Search Settings
+Category_Label_PEOPLE_SEARCH_PROFILE=People Search Profiles
 Category_Label_PROFILES=Policies
 Category_Label_PW_EXP_NOTIFY=Password Expiration Notification
 Category_Label_RECOVERY_DEF=Definition
@@ -610,6 +614,8 @@ Setting_Description_peopleSearch.orgChart.workforceIdAttribute=Specify the attri
 Setting_Description_peopleSearch.photo.ldapAttribute=Specify the LDAP Attribute to use for a photo. Leave this option blank, if you do not want to display a photo.
 Setting_Description_peopleSearch.photo.queryFilter=Specify an LDAP permission filter to control photo visibility when displaying an organizational chart or detail record view. If a user does not match this permission, @PwmAppName@ does not display the user's photo.
 Setting_Description_peopleSearch.photo.urlOverride=Specify a URL to override the photo. If the LDAP directory does not store the users' photos, this setting can show photos from an external system.  If you specify this setting, @PwmAppName@ does not load the the photo from the LDAP directory.<br/><br/>Example\:<code>http\://photos.example.com/employee/@LDAP\:workforceID@.jpg</code>
+Setting_Description_peopleSearch.profile.list=List of People Search profiles.  In most cases, you only need a single profile.  Only define multiple profiles if different People Search users need different features and permissions.  Each People SEarch profile has a <b>People Search Profile Match</b> setting used to define to whom the profile applies.  If multiple profiles apply for a user, @PwmAppName@ assigns the first profile defined in the list.
+Setting_Description_peopleSearch.public.profile=Name of the People Search profile to be used by public users.
 Setting_Description_peopleSearch.queryMatch=Define an LDAP directory filter that contains the users permitted to access the People Search module.
 Setting_Description_peopleSearch.result.form=Specify the attributes the People Search module shows in the search results table during searches.
 Setting_Description_peopleSearch.result.limit=Specify the maximum number of records @PwmAppName@ returns while searching.
@@ -1135,6 +1141,8 @@ Setting_Label_peopleSearch.orgChart.workforceIdAttribute=Organizational Chart Wo
 Setting_Label_peopleSearch.photo.ldapAttribute=LDAP Photo Attribute
 Setting_Label_peopleSearch.photo.queryFilter=Photo Display Permission
 Setting_Label_peopleSearch.photo.urlOverride=Photo URL Override
+Setting_Label_peopleSearch.profile.list=People Search Profiles
+Setting_Label_peopleSearch.public.profile=People Search Public Profile
 Setting_Label_peopleSearch.queryMatch=Permitted Users
 Setting_Label_peopleSearch.result.form=Search Result Attributes
 Setting_Label_peopleSearch.result.limit=Search Result Limit
