--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -87,7 +87,8 @@ Display_PleaseWait=Odota hetki...
 Display_PleaseWaitPassword=Salasanaa vaihdetaan. Odota hetki ...
 Display_RecoverChoiceReset=Aseta uusi salasana. Jos olet unohtanut salasanasi ja haluat asettaa uuden klikkaa t\u00e4st\u00e4. Samalla k\u00e4ytt\u00e4j\u00e4tunnuksesi my\u00f6s vapautetaan mik\u00e4li se on lukittuna.
 Display_RecoverChoiceUnlock=Vapauta lukittu k\u00e4ytt\u00e4j\u00e4tunnus.
-Display_RecoverTokenSendOneChoice=Vahvistaaksesi henkilöllisyytesi lähetetään sinulle suojakoodi numeroon %1%.
+Display_RecoverTokenSendOneChoice=Vahvistaaksesi henkil\u00f6llisyytesi l\u00e4hetet\u00e4\u00e4n teille suojakoodi numeroon %1%.
+Display_RecoverTokenSuccess=Kiitos! Teille l\u00e4hetetty suojakoodi numeroon <b>%1%</b> on vahvistettu.
 Display_RecoverEnterCode=Turvakoodi on l\u00e4hetetty sinulle osoitteeseen %1%. Sy\u00f6t\u00e4 saamasi koodi alla olevaan kentt\u00e4\u00e4n.
 Display_RecoverPassword=Vastaa seuraaviin kysymyksiin. Kun vastaat kysymyksiin oikein voit vaihtaa unohtuneen salasanasi.
 Display_RecoverPasswordChoices=K\u00e4ytt\u00e4j\u00e4tunnuksesi on lukittu liian monen v\u00e4\u00e4r\u00e4n salasanan sy\u00f6tt\u00e4misen johdosta. Voit jatkaa lukitun tunnuksen avauksella tai vaihtaa salasanasi.
