wordlist disk space checking

--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -70,6 +70,7 @@ HealthMessage_TokenServiceError=An error occurred during the TokenService startu
 HealthMessage_Java_HighThreads=Java thread count is unusually large (%1% threads)
 HealthMessage_Java_SmallHeap=Java maximum memory heap size is set to default of 64MB.  Please increase the memory heap size.
 HealthMessage_Java_OK=Java platform is operating normally
+HealthMessage_LocalDB_LowDiskSpace=Free storage space remaining for LocalDB storage is %1%.  Free additional storage space to prevent a possible service interruption.
 HealthMessage_LocalDB_OK=LocalDB and related services are operating correctly
 HealthMessage_LocalDB_BAD=LocalDB is not online. Startup error: %1%
 HealthMessage_LocalDB_NEW=LocalDB status is NEW (loading) state, until LocalDB loads, statistics, online logging, word lists and other features are disabled
@@ -82,6 +83,7 @@ HealthMessage_ServiceClosed=unable to start %1% service   %2%
 HealthMessage_ServiceClosed_LocalDBUnavail=unable to start %1% service, LocalDB is not available
 HealthMessage_ServiceClosed_AppReadOnly=unable to start %1% service, application is in read-only mode
 HealthMessage_Wordlist_AutoImportFailure=Configured word list (%1%) failed to import due to error: %2% at timestamp %3%
+HealthMessage_Wordlist_ImportInProgress=Wordlist import is in progress.  Application performance may be degraded during import.  %1%
 HealthStatus_WARN=WARN
 HealthStatus_CAUTION=CAUTION
 HealthStatus_CONFIG=CONFIGURATION
