minor wordlist import display/debug output enhancements

--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -64,6 +64,7 @@ Display_SettingNavigationSeparator=\u0020\u21e8\u0020
 Display_SettingNavigationNullProfile=[profile]
 Display_RememberLogin=Remember password for %1%.
 Display_ProfileNamingRules=<p>Profile names have the following requirements\:</p><ul><li>Start with a letter (a-Z)</li><li>Contain only letters, numbers and hyphens</li><li>Length between 2 and 15 characters</li></ul>
+Display_UploadWordlist=This direct upload process should only be used for test purposes.  For non-test purposes, use the settings at @PwmSettingCategoryReference:WORDLISTS@ to configure automatic import and updates of the word list.<br/><br/>Word lists uploaded here are subject to be cleared during software updates, configuration changes and other events.
 Label_UserPasswordAttribute=[User Password]
 Label_Seedlist=Seed List
 Label_Wordlist=Word List
