sms setting enhancements

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1226,7 +1226,7 @@ Setting_Label_sms.gatewayAuthMethod=SMS Gateway Authentication Method
 Setting_Label_sms.gatewayCertificates=SMS Gateway Certificates
 Setting_Label_sms.gatewayMethod=HTTP(S) Method
 Setting_Label_sms.gatewayPassword=SMS Gateway Password
-Setting_Label_sms.gatewayURL=SMS Gateway
+Setting_Label_sms.gatewayURL=SMS Gateway URL
 Setting_Label_sms.gatewayUser=SMS Gateway User
 Setting_Label_sms.helpdesk.token.message=Help Desk Verification SMS Text
 Setting_Label_sms.httpRequestHeaders=SMS Gateway HTTP Request Headers
