--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1150,7 +1150,7 @@ Setting_Label_peopleSearch.searchAttributes=Search Attributes
 Setting_Label_peopleSearch.search.form=Search Attributes
 Setting_Label_peopleSearch.searchBase=LDAP Search base
 Setting_Label_peopleSearch.searchFilter=People Search LDAP Filter
-Setting_Label_peopleSearch.useProxy=Use Proxy Account
+Setting_Label_peopleSearch.useProxy=Use Proxy LDAP Account
 Setting_Label_pwmAdmin.queryMatch=Administrator Permission
 Setting_Label_pwmAdmin.allowSkipForcedActivities=Allow Admin to Skip Forced Activities
 Setting_Label_pwm.appProperty.overrides=App Property Overrides
