profile-enable change password module

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -36,6 +36,8 @@ Category_Description_CAS_SSO=
 Category_Description_CHALLENGE_POLICY=Define the challenge policy users use for populating response answers.
 Category_Description_CHALLENGE=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
 Category_Description_CHANGE_PASSWORD=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
+Category_Description_CHANGE_PASSWORD_SETTINGS=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
+Category_Description_CHANGE_PASSWORD_PROFILE=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
 Category_Description_CLUSTERING=Session Management
 Category_Description_DATABASE_ADV=Advanced database configuration settings.
 Category_Description_DATABASE=Optional database configuration settings.  If configured, you can use a remote RDBMS SQL-complaint database to store data for certain functions.  Any standard RDBMS that supports a standard Java JDBC driver can work.  Upon startup, @PwmAppName@ establishes a database connection and creates any necessary tables and schema.  You can configure multiple application instances for the same database instance.
@@ -139,6 +141,8 @@ Category_Label_CAS_SSO=CAS SSO
 Category_Label_CHALLENGE_POLICY=Challenge Policies
 Category_Label_CHALLENGE=Setup Security Questions
 Category_Label_CHANGE_PASSWORD=Change Password
+Category_Label_CHANGE_PASSWORD_SETTINGS=Settings
+Category_Label_CHANGE_PASSWORD_PROFILE=Profiles
 Category_Label_CLUSTERING=Session Management
 Category_Label_DATABASE_ADV=Advanced
 Category_Label_DATABASE=Database (Remote)
@@ -538,6 +542,8 @@ Setting_Description_otp.secret.readPreference=Select the location where to read 
 Setting_Description_otp.secret.recoveryCodes=Specify the number of OTP recovery codes to supply to the users. Recovery codes can be used one time each to authenticate and are intended for occasions when the users lose access to their OTP devices. Set to zero to disable recovery codes. Not all storage formats support recovery codes.
 Setting_Description_otp.secret.storageFormat=Select the storage format used to save one time password secrets.\n<table style\="width\: 400px">\n<tr><td>Format</td><td>Description</td></tr>\n<tr><td>PWM JSON</td><td>Store the secret, descriptions, and recovery codes in PWM native (json) format.</td></tr>\n<tr><td>Base32 secret</td><td>Store only the TOTP-secret as a base32 encoded string. This format does not support recovery codes or counter based tokens.</td></tr>\n<tr><td>OTP URL</td><td>Store the secret and description as an otpauth\:// url, used for generating the QR-code. This format does not support recovery codes.</td></tr>\n<tr><td>PAM text</td><td>Store the secret, description, and recovery codes in the text file format, used by the Google Authenticator PAM module.</td></tr>\n</table>
 Setting_Description_otp.secret.writePreference=Select the location where to write the OTP secret. @PwmAppName@ writes to all storage methods when the users configures their response answers.
+Setting_Description_changePassword.profile.list=Specify the profiles of the change password module.
+Setting_Description_changePassword.enable=Enable or Disable the change password module.
 Setting_Description_password.allowChange.queryMatch=Specify the permissions used to detect if @PwmAppName@ permits users to change their passwords.
 Setting_Description_password.change.requireCurrent=Enable this option to require users to provide their current passwords on the Change Password page. You must enable this option if users are using a single sign-on service. In most cases, this is not required because the single sign-on service authenticates the users prior to accessing the Change Password page.
 Setting_Description_passwordLastUpdateAttribute=Specify the attribute that @PwmAppName@ uses to mark when the user updates password. Plus @PwmAppName@ uses it during replication checks and other processes.
@@ -1067,7 +1073,9 @@ Setting_Label_otp.secret.readPreference=OTP Secret Read Location
 Setting_Label_otp.secret.recoveryCodes=OTP Recovery Codes
 Setting_Label_otp.secret.storageFormat=Token Storage Method
 Setting_Label_otp.secret.writePreference=OTP Secret Write Location
-Setting_Label_password.allowChange.queryMatch=Change Password Permission
+Setting_Label_changePassword.profile.list=Change Password Profiles.
+Setting_Label_changePassword.enable=Enable Change Password Module.
+Setting_Label_password.allowChange.queryMatch=Change Password Profile Match
 Setting_Label_password.change.requireCurrent=Require Current Password During Change
 Setting_Label_passwordLastUpdateAttribute=Last Password Update Attribute
 Setting_Label_password.policy.ADComplexity=DEPRECATED-Enforce Microsoft-AD 2003 Password Complexity
@@ -1084,7 +1092,7 @@ Setting_Label_password.policy.caseSensitivity=Password is Case Sensitive
 Setting_Label_password.policy.changeMessage=Password Change Message
 Setting_Label_password.policy.charGroup.minimumMatch=Minimum Character Groups Required
 Setting_Label_password.policy.charGroup.regExValues=Character Group Definitions
-Setting_Label_password.policy.checkWordlist=Enable Word List
+Setting_Label_password.policy.checkWordlist=Enforce Word List
 Setting_Label_password.policy.disallowCurrent=Disallow Current Password
 Setting_Label_password.policy.disallowedAttributes=Disallowed Attributes
 Setting_Label_password.policy.disallowedValues=Disallowed Values
