add profiles to account information module

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -20,6 +20,8 @@
 
 
 Category_Description_ACCOUNT_INFO=Show account information to the logged in user.
+Category_Description_ACCOUNT_INFO_SETTINGS=Settings for the account information module.
+Category_Description_ACCOUNT_INFO_PROFILE=Profiles for account information.
 Category_Description_ACTIVATION=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
 Category_Description_ACTIVATION_SETTINGS=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
 Category_Description_ACTIVATION_PROFILE=The user activation module enables users to activate an account they have not previously authenticated. The user does not need to know the password to activate the account. Configure settings so that users can only execute this function once. Existing users cannot use this function.
@@ -125,6 +127,8 @@ Category_Description_WEB_SECURITY=
 Category_Description_WEB_SERVICES=Settings that are of interest to developers or component integrators.
 Category_Description_WORDLISTS=Word Lists
 Category_Label_ACCOUNT_INFO=Account Information
+Category_Label_ACCOUNT_INFO_SETTINGS=Settings
+Category_Label_ACCOUNT_INFO_PROFILE=Profiles
 Category_Label_ACTIVATION=User Activation
 Category_Label_ACTIVATION_SETTINGS=Settings
 Category_Label_ACTIVATION_PROFILE=User Activation Profiles
@@ -229,6 +233,8 @@ Category_Label_USER_INTERFACE=User Interface
 Category_Label_WEB_SECURITY=Web Security
 Category_Label_WEB_SERVICES=Web Services
 Category_Label_WORDLISTS=Word Lists
+Setting_Description_accountInfo.profile.list=Profiles
+Setting_Description_accountInfo.queryMatch=Account Information Profile Match
 Setting_Description_accountInfo.view.form=Specify the LDAP attributes to show to users on the account information page.
 Setting_Description_accountInfo.viewStatusValues=Select the fields that are available for the users to view about their own account.
 Setting_Description_activateUser.allowUnlock=Enable this option to allow users to try to unlock the user account during activation.  If true, and if the users' account are locked @PwmAppName@ unlocks the users' accounts.
@@ -760,6 +766,8 @@ Setting_Description_webservices.public.enable=Web Services which are enabled for
 Setting_Description_webservices.thirdParty.queryMatch=Add an LDAP filter that contains the users permitted to execute REST web services and specify a third party via the 'username' parameter.
 Setting_Description_webservice.userAttributes=Add the user attributes that the various web services use and @PwmAppName@ presents as part of the users' data sets.
 Setting_Description_wordlistCaseSensitive=Enable this option to treat the word list as case sensitive for all matches. Changing this value causes @PwmAppName@ to recompile the word list.
+Setting_Label_accountInfo.profile.list=Profiles
+Setting_Label_accountInfo.queryMatch=Account Information Profile Match
 Setting_Label_accountInfo.view.form=LDAP Display Attributes
 Setting_Label_accountInfo.viewStatusValues=Viewable Status Fields
 Setting_Label_activateUser.allowUnlock=Unlock User During Activation
@@ -1073,8 +1081,8 @@ Setting_Label_otp.secret.readPreference=OTP Secret Read Location
 Setting_Label_otp.secret.recoveryCodes=OTP Recovery Codes
 Setting_Label_otp.secret.storageFormat=Token Storage Method
 Setting_Label_otp.secret.writePreference=OTP Secret Write Location
-Setting_Label_changePassword.profile.list=Change Password Profiles.
-Setting_Label_changePassword.enable=Enable Change Password Module.
+Setting_Label_changePassword.profile.list=Change Password Profiles
+Setting_Label_changePassword.enable=Enable Change Password Module
 Setting_Label_password.allowChange.queryMatch=Change Password Profile Match
 Setting_Label_password.change.requireCurrent=Require Current Password During Change
 Setting_Label_passwordLastUpdateAttribute=Last Password Update Attribute
