--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -34,6 +34,7 @@ HealthMessage_LDAP_TestUserOK=LDAP test user account is functioning normally for
 HealthMessage_LDAP_AD_Unsecure=%1% is not configured as a secure connection.  Active Directory requires a secure connection to allow password changes.
 HealthMessage_LDAP_AD_StaticIP=%1% should be configured using a dns hostname instead of an IP address.  Active Directory can sometimes have errors when using an IP address for configuration.
 HealthMessage_Email_SendFailure=Unable to send email due to error: %1%
+HealthMessage_Email_ConnectFailure=Unable to connect to SMTP email profile '%1%', error: %2%
 HealthMessage_PwNotify_Failure=Error while sending password notification emails: %1%
 HealthMessage_MissingResource=missing resource: bundle=%1%, locale=%2%, key=%3%
 HealthMessage_BrokenMethod=broken method invocation for '%1%', error: %2%
