fix newuser profile password policy not honoring new user ldap profile bug

--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -21,6 +21,7 @@
 
 HealthMessage_NoData=Health data is not currently available.  Please check again in a moment.
 HealthMessage_LDAP_OK=All configured LDAP servers are reachable
+HealthMessage_EMail_OK=All configured Email servers are reachable
 HealthMessage_LDAP_No_Connection=Unable to connect to LDAP server %1%, error: %2%
 HealthMessage_LDAP_ProxyTestSameUser=%1% setting is the same value as the %2% setting
 HealthMessage_LDAP_ProxyUserPwExpired=Proxy user %1% password will expire within %2%.  The proxy user password should never expire. 
